--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,3 +25,6 @@ jobs:
         run: |
           docker run -d -p 80:80 --name nginx-container my-nginx
           # This is a basic workflow to help you get started with Actions
+      - name: Docker container inspect 
+        run: |
+          docker inspect nginx-container
