Update blank.yml container list add

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,3 +28,6 @@ jobs:
       - name: Docker container inspect 
         run: |
           docker inspect nginx-container
+      - name: docker container list
+        run: |
+          docker ps -a
